--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -68,7 +68,7 @@ $body-bg: #fff;
 // Colors
 
 // $primary-color: #2ba6cb;
-$primary-color: #3e94d1;
+$primary-color: #999999;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
 // $success-color: #5da423;
