--- a/app/views/survey_results/show.html.erb
+++ b/app/views/survey_results/show.html.erb
@@ -1,17 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Type:</strong>
-  <%= @survey_result.personality_type.name %>
-</p>
-<p>
-  <strong>Type:</strong>
+<h3 style="text-align:center">
   <%= @survey_result.personality_type.title %>
-</p>
-<p>
-  <strong>Description:</strong><br/>
+</h3><hr style="width:100%"/>
+  <p>
   <%= @survey_result.personality_type.message %>
 </P>
-
-<%= link_to 'Edit', edit_user_survey_result_path(@user,@survey_result) %> |
-<%= link_to 'Back', user_survey_results_path(@user,@survey_result) %>
