--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,8 @@
 
   <body>
   <div class="row" style="border-bottom: #FFE607 2px solid">
-    <div class="large-4 columns text-center">
-      <img src="/rci-large.png" />
-    </div>
-    <div class="large-8 columns">
-      <h3 class="hide-for-small">RELATIVE CAPTIVITY INDICATOR (RCI)TM</h3>
+    <div class="large-12 columns text-center">
+      <img src="/rci-large.png" style="width:500px"/>
     </div>
   </div><br/>
   
