--- a/app/views/survey_results/show.html.erb
+++ b/app/views/survey_results/show.html.erb
@@ -5,7 +5,7 @@
   <%= @survey_result.personality_type.message %>
 </P>
 <div class="row">
-	<div class="large-12 columns text-centered">
+	<div class="small-8 small-centered columns text-center">
 		<%= link_to 'Done!', logout_path, class: "radius button" %>
 	</div>
 </div>
