--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,83 +12,18 @@
  *= require foundation_and_overrides
  *= require_tree .
 */
+.dark-gradient {
+  background-image: linear-gradient(bottom, rgb(151,151,153) 0%, rgb(40,40,46) 52%);
+  background-image: -o-linear-gradient(bottom, rgb(151,151,153) 0%, rgb(40,40,46) 52%);
+  background-image: -moz-linear-gradient(bottom, rgb(151,151,153) 0%, rgb(40,40,46) 52%);
+  background-image: -webkit-linear-gradient(bottom, rgb(151,151,153) 0%, rgb(40,40,46) 52%);
+  background-image: -ms-linear-gradient(bottom, rgb(151,151,153) 0%, rgb(40,40,46) 52%);
 
-/*html, body {
-  background-color: #4B7399;
-  font-family: Verdana, Helvetica, Arial;
-  font-size: 14px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0, rgb(151,151,153)),
+    color-stop(0.52, rgb(40,40,46))
+  );
 }
-
-a img {
-  border: none;
-}
-
-a {
-  color: #0000FF;
-}
-
-.clear {
-  clear: both;
-  height: 0;
-  overflow: hidden;
-}
-
-#container {
-  width: 75%;
-  margin: 0 auto;
-  background-color: #FFF;
-  padding: 20px 40px;
-  border: solid 1px black;
-  margin-top: 20px;
-}
-
-#flash_notice, #flash_error, #flash_alert {
-  padding: 5px 8px;
-  margin: 10px 0;
-}
-
-#flash_notice {
-  background-color: #CFC;
-  border: solid 1px #6C6;
-}
-
-#flash_error, #flash_alert {
-  background-color: #FCC;
-  border: solid 1px #C66;
-}
-
-.field_with_errors {
-  display: inline;
-}
-
-.error_messages {
-  width: 400px;
-  border: 2px solid #CF0000;
-  padding: 0px;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-  font-size: 12px;
-}
-
-.error_messages h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 10px;
-  font-size: 12px;
-  margin: 0;
-  background-color: #c00;
-  color: #fff;
-}
-
-.error_messages p {
-  margin: 8px 10px;
-}
-
-.error_messages ul {
-  margin-bottom: 0;
-}
-
-form .field, form .actions {
-  margin: 12px 0;
-}*/
