--- a/app/views/survey_instance/new.html.erb
+++ b/app/views/survey_instance/new.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 <% end %>
 <div class="row">
-	<div class="small-12 columns">
+	<div class="small-12 small-centered columns">
 	<h3 id="question"></h3>
 		<div class="radius button answer-button" id="answer1" data-category="" style="width:100%"></div><br/>
 		<div class="radius button answer-button" id="answer2" data-category="" style="width:100%"></div>
