--- a/app/views/personality_types/edit.html.erb
+++ b/app/views/personality_types/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', survey_personality_types_path(@personality_type) %> |
-<%= link_to 'Back', survey_personality_types_path %>
+<%= link_to 'Show', personality_types_path(@personality_type) %> |
+<%= link_to 'Back', personality_types_path %>
