--- a/app/views/personality_types/show.html.erb
+++ b/app/views/personality_types/show.html.erb
@@ -15,5 +15,5 @@
   <%= @personality_type.message %>
 </p>
 
-<%= link_to 'Edit', edit_survey_personality_type_path(@survey,@personality_type) %> |
-<%= link_to 'Back', survey_personality_types_path %>
+<%= link_to 'Edit', edit_personality_type_path(@personality_type) %> |
+<%= link_to 'Back', personality_types_path %>
