--- a/app/views/surveys/_answer_fields.html.erb
+++ b/app/views/surveys/_answer_fields.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <%= f.label :content, "Answer" %>
+    <%= f.label :answer, "Answer" %>
   <%= f.text_field :content %>
   <%= f.label :category, "Category" %>
   <%= f.text_field :category %>
