--- a/app/views/surveys/_question_fields.html.erb
+++ b/app/views/surveys/_question_fields.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <%= f.label :content, "Question" %><br />
+<legend>Question</legend>  
   <%= f.text_area :content %><br />
   <%= f.check_box :_destroy %>
   <%= f.label :_destroy, "Remove Question" %>
