--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+<div class="large-12 columns">
 <h1><%= @survey.name %></h1>
 
 <ol class="questions">
@@ -15,3 +17,5 @@
 
 <%= link_to 'Edit', edit_survey_path(@survey) %> |
 <%= link_to 'Back to Surveys', surveys_path %>
+</div>
+</div>
