Admin complete with search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   <!-- mobile screen -->
  <div class="row">
   <div class="large-12 columns show-for-small">
-    <a href="/take_survey" class="radius button" style="width: 100%">Take The RPI Now!</a>
+    <a href="/take_survey" class="radius button success" style="width: 100%">Take The RPI Now!</a>
   </div>
  </div>
 
