--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -71,7 +71,7 @@ $body-bg: #fff;
 $primary-color: #999999;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
-$alert-color: #FFE607;
+$alert-color: #F88914;
 // $success-color: #5da423;
 
 // Make sure border radius matches unless we want it different.
