--- a/app/views/survey_users/new.html.erb
+++ b/app/views/survey_users/new.html.erb
@@ -31,7 +31,7 @@
     <label>Phone</label><br/>
     <%= f.text_field :phone, :'placeholder' => "(555) 867-5309" %>
   </div>
-  <a href="javascript:$('form').submit()" class="radius button" style="width: 100%">Get Started!</a>
+  <a href="javascript:$('form').submit()" class="radius button success" style="width: 100%">Get Started!</a>
 
 </div>
 </div>
