save point partial refactoring

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,23 +4,37 @@
         <iframe src="http://www.youtube.com/embed/bB-bs0Y7kmc?controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
+    
+    <!-- full screen view -->
     <div class="large-6 columns hide-for-small radius panel">
-      <p style="font-size: 22px; color: #999; text-align:justify"><i><strong style="font-size: 1.2em">The RPI</strong> is a unique personality profile test that will help you see some of the ways you are sabotaging your own success, some strengths you have, and give you insight into how you can get rid of some of the chains that hold you back. When you honestly answer the questions, you will be amazed at the results!<br/>~ Kenn Sullivan</i></p>
+      <div class="row">
+        <h4>What Is Your RPI?</h4>
+      <p>"Take the RPI test now…then go and tell all of your friends, so you can compare profiles.<br/>
     </div>
+    <div class="row text-center">
+      <%= link_to "Take The RPI Now!", take_survey_path, :class => "large radius button success" %>
+    </div>
+    </div>
+
+    <!-- mobile view -->
     <div class="large-6 columns show-for-small">
-      <p style="font-size: 10px; color: #999; text-align:justify"><i><strong style="font-size: 1.2em">The RPI</strong> is a unique personality profile test that will help you see some of the ways you are sabotaging your own success, some strengths you have, and give you insight into how you can get rid of some of the chains that hold you back. When you honestly answer the questions, you will be amazed at the results!<br/>~ Kenn Sullivan</i></p>
     </div>
   </div>
      
   
     </div>
   </div><br>
+
+    <!-- mobile screen -->
+ <div class="row">
+  <div class="large-12 columns show-for-small">
+    <a href="/take_survey" class="radius button success" style="width: 100%">Take The RPI Now!</a>
+  </div>
+ </div>
  
-<!--   <div class="row hide-for-small">
+   <div class="row hide-for-small">
     <div class="large-12 columns">
       <div class="row">
- 
- 
         <div class="large-3 small-6 columns">
           <img src="http://placehold.it/250x250&text=Thumbnail" />
           <div class="panel">Shining Star</div>
@@ -40,14 +54,78 @@
           <img src="http://placehold.it/250x250&text=Thumbnail" />
           <div class="panel">Tenacious Bulldog</div>
         </div>
- 
- 
       </div>
+
+      <div class="row">
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">Shining Star</div>
+        </div>
+ 
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">Concerned Chameleon</div>
+        </div>
+ 
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">People's Person</div>
+        </div>
+ 
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">Tenacious Bulldog</div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">Shining Star</div>
+        </div>
+ 
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">Concerned Chameleon</div>
+        </div>
+ 
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">People's Person</div>
+        </div>
+ 
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">Tenacious Bulldog</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">Shining Star</div>
+        </div>
+ 
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">Concerned Chameleon</div>
+        </div>
+ 
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">People's Person</div>
+        </div>
+ 
+        <div class="large-3 small-6 columns">
+          <img src="http://placehold.it/250x250&text=Thumbnail" />
+          <div class="panel">Tenacious Bulldog</div>
+        </div>
+      </div>      
+
     </div>
-  </div> -->
+  </div> 
  
    <!-- Call to Action Panel -->
-<!--   <div class="row hide-for-small">
+   <div class="row hide-for-small">
     <div class="large-12 columns">
     
       <div class="panel">
@@ -64,4 +142,4 @@
       </div>
       
     </div>
-  </div> -->
+  </div> 
