--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,55 +1,4 @@
-<!DOCTYPE html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RPI | BiggerGains International</title>
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "vendor/custom.modernizr" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-  </head>
-
-  <body>
-  <div class="row" style="border-bottom: #FFE607 2px solid">
-    <div class="large-12 columns text-center">
-      <a href="/"><img src="/rci-large.png" style="width:500px"/></a>
-    </div>
-  </div><br/>
-  
-  <%= yield %>
-
-  <!-- mobile screen -->
- <div class="row">
-  <div class="large-12 columns show-for-small">
-    <a href="/take_survey" class="radius button success" style="width: 100%">Take The RPI Now!</a>
-  </div>
- </div>
-
-    <!-- Footer Large -->
- 
-  <footer class="row hide-for-small">
-    <div class="large-12 columns">
-      <hr>
-      <div class="row">
-        <div class="large-6 columns">
-          <p>&copy; Copyright no one at all. Go to town.</p>
-        </div>
-        <div class="large-6 columns">
-          <ul class="inline-list right">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
- 
-  </body>
-</html>
+<%= render :partial => 'layouts/header' %>
+<%= render :partial => 'layouts/admin' %>
+<%= yield %>
+<%= render :partial => 'layouts/footer' %>
