--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,15 +3,15 @@
     <div class="large-12 columns">
       <hr>
       <div class="row">
-        <div class="large-6 columns">
-          <p>&copy; Copyright no one at all. Go to town.</p>
+        <div class="large-8 columns">
+          <p>Copyright &copy; 2004-2013 Bigger gains International,LLC All Rights Reserved</p>
         </div>
-        <div class="large-6 columns">
+        <div class="large-4 columns">
           <ul class="inline-list right">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
+            <li><a href="http://www.facebook.com/kenn.sullivan"><i class="social foundicon-facebook" style="font-size: 1.5em;"></i></a></li>
+            <li><a href="http://twitter.com/kennsullivan"><i class="social foundicon-twitter" style="font-size: 1.5em;"></i></a></li>
+            <li><a href="http://www.linkedin.com/pub/kenn-sullivan/2/191/996"><i class="social foundicon-linkedin" style="font-size: 1.5em;"></i></a></li>
+            <li><a href="http://www.youtube.com/watch?v=EkMXqdjkxjM"><i class="social foundicon-youtube" style="font-size: 1.5em;"></i></a></li>
           </ul>
         </div>
       </div>
