Chart.js and a sample report

--- a/app/views/personality_types/edit.html.erb
+++ b/app/views/personality_types/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing personality_type</h1>
-
+<div class="row">
+<div class="lage-10 columns">
 <%= render 'form' %>
-
-<%= link_to 'Show', personality_types_path(@personality_type) %> |
-<%= link_to 'Back', personality_types_path %>
+<%= link_to 'Show', personality_type_path(@personality_type), class: "radius button" %> 
+<%= link_to 'Back', personality_types_path, class: "radius button" %>
+</div>
+</div>
