--- a/app/views/survey_users/new.html.erb
+++ b/app/views/survey_users/new.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="large-8 large-centered columns">
 <%= form_for @survey_user, :html => {class: "custom", :'data-abide' => "true"} do |f| %>
   <% if @survey_user.errors.any? %>
     <div class="error_messages">
@@ -36,3 +38,5 @@
 </div>
 </div>
 <% end %>
+</div>
+</div>
