--- a/app/views/personality_types/_form.html.erb
+++ b/app/views/personality_types/_form.html.erb
@@ -12,16 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label 'Indicator' %><br>
+    <%= f.text_field :name , style: "width:80px"%>
   </div>
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, style: "width:400px" %>
   </div>
   <div class="field">
     <%= f.label :message %><br>
-    <%= f.text_area :message %>
+    <%= f.text_area :message, style: "width:100%; height:400px" %>
   </div>
   <div class="actions">
     <%= f.submit %>
