--- a/app/views/personality_types/new.html.erb
+++ b/app/views/personality_types/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New personality_type</h1>
-
+<div class="row">
+<div class="lage-10 columns">
 <%= render 'form' %>
-
-<%= link_to 'Back', personality_types_path %>
+<%= link_to 'Back', personality_types_path, class: "radius button" %>
+</div>
+</div>
