--- a/app/views/survey_instance/new.html.erb
+++ b/app/views/survey_instance/new.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+	<div class="large-8 large-centered columns">
 <%= form_tag survey_instance_index_path do |f| %>
   <% (1..70).each do |i| %>
     <input type="hidden" name="questions[<%= i %>]" id="question<%= i %>" value=""/>
@@ -9,5 +11,7 @@
 		<div class="radius button answer-button" id="answer1" data-category="" style="width:100%"></div><br/>
 		<div class="radius button answer-button" id="answer2" data-category="" style="width:100%"></div>
 	</div>
+</div>
+</div>
 </div>
 <script src="/survey.js"></script>
