Assets pipeline fixes

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,7 +5,7 @@
 	</div>
 </div>
 
-
+<script src="/javascripts/Chart.js"></script>
 <script>
 var data = {
 	labels : <%= @report.indicator_totals.keys.to_json.html_safe %>,
