routing fixes, text editor added

--- a/app/views/personality_types/_form.html.erb
+++ b/app/views/personality_types/_form.html.erb
@@ -23,7 +23,9 @@
     <%= f.label :message %><br>
     <%= f.text_area :message, style: "width:100%; height:400px" %>
   </div>
-  <div class="actions">
+<!--   <div class="actions">
     <%= f.submit %>
-  </div>
+  </div> -->
+  <br/>
+  <a href="javascript:$('form').submit()" class="radius button success">Save</a>
 <% end %>
