--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,19 +4,24 @@
         <iframe src="http://www.youtube.com/embed/bB-bs0Y7kmc?controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
-    <div class="large-4 columns">
+
+    <div class="large-4 columns hide-for-small">
+      
       <div class="row text-center"><br/><br/>
       <%= link_to "Take The RPI Now!", take_survey_path, :class => "large radius button success" %>
       </div>
-      <div class="row text-center">
-      <div id="fb-root"></div>
-      <p><script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="http://www.facebook.com/biggergains" show_faces="true" stream="false" header="false"></fb:like-box>
-      <div class='sociable'>
-      <div><iframe src='http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fbiggergains.com%2Frci%2F&amp;layout=standard&amp;colorscheme=light&amp;show_faces=false' scrolling='no' frameborder='0' class='sociable-fb-standard'></iframe></div>
+      
+      <div class="row text-center ">
+          <div id="fb-root"></div>
+          <p><script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+            <fb:like-box href="http://www.facebook.com/biggergains" show_faces="true" stream="false" header="false"></fb:like-box>
+          <div class='sociable'>
+            <div><iframe src='http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fbiggergains.com%2Frci%2F&amp;layout=standard&amp;colorscheme=light&amp;show_faces=false' scrolling='no' frameborder='0' class='sociable-fb-standard'></iframe></div>
+          </div>
       </div>
+
     </div>
-  </div>
-    </div>
+
   </div>
 
     <!-- mobile screen -->
