--- a/app/views/personality_types/edit.html.erb
+++ b/app/views/personality_types/edit.html.erb
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="/javascripts/tinymce.min.js"></script>
+
 <div class="row">
 <div class="lage-10 columns">
 <%= render 'form' %>
@@ -5,3 +7,11 @@
 <%= link_to 'Back', personality_types_path, class: "radius button" %>
 </div>
 </div>
+<script type="text/javascript">
+tinymce.init({
+    selector: "#personality_type_message",
+    plugins: "preview",
+    plugins: "table",
+    toolbar: "undo redo | styleselect | bold italic | link image | hr | table | preview"
+ });
+</script>
